--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^2.4.2"
   },
   "devDependencies": {
-    "chai": "^4.1.0"
+    "chai": "^4.1.0",
+    "mock-express": "^1.2.0"
   }
 }
